# ChangeLog for net-analyzer/nagios-plugins
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nagios-plugins/ChangeLog,v 1.50 2006/07/18 16:30:34 ramereth Exp $

*nagios-plugins-1.4.3-r1 (18 Jul 2006)

  18 Jul 2006; Lance Albertson <ramereth@gentoo.org>
  +files/nagios-plugins-1.4.3-check_disk-fix.patch,
  +files/nagios-plugins-1.4-autoconf-fix.patch,
  -nagios-plugins-1.4.3.ebuild, +nagios-plugins-1.4.3-r1.ebuild:
  * Fix configure.in, bug #138690
  * Add patch for check_disk, bug #138731
  * Clean up old ebuild

  15 May 2006; Robin H. Johnson <robbat2@gentoo.org>
  nagios-plugins-1.4.ebuild, nagios-plugins-1.4.1.ebuild,
  nagios-plugins-1.4.2.ebuild, nagios-plugins-1.4.2-r1.ebuild,
  nagios-plugins-1.4.3.ebuild:
  Move nut to sys-power.

  07 May 2006; Markus Rothe <corsair@gentoo.org>
  nagios-plugins-1.4.2.ebuild:
  Stable on ppc64

*nagios-plugins-1.4.3 (19 Apr 2006)

  19 Apr 2006; Lance Albertson <ramereth@gentoo.org>
  +nagios-plugins-1.4.3.ebuild:
  * Version bump

  29 Jan 2006; Eldad Zack <eldad@gentoo.org> nagios-plugins-1.3.1-r1.ebuild,
  nagios-plugins-1.4.ebuild, nagios-plugins-1.4.1.ebuild,
  nagios-plugins-1.4.2.ebuild, nagios-plugins-1.4.2-r1.ebuild:
  Added RESTRICT test (Bug 100439). Converted other versions' src_test to
  RESTRICT test instead (and fixed an einfo typo)

  29 Jan 2006; Eldad Zack <eldad@gentoo.org> nagios-plugins-1.3.1-r1.ebuild:
  Bug 97652: added check for /etc/mtab, as it may be missing in chroot'ed
  enviornments. The check is only needed for 1.3.1

  10 Jan 2006; Gustavo Zacarias <gustavoz@gentoo.org>
  nagios-plugins-1.4.2.ebuild:
  Stable on sparc

  17 Dec 2005; Markus Rothe <corsair@gentoo.org>
  nagios-plugins-1.4.2-r1.ebuild:
  Added ~ppc64

*nagios-plugins-1.4.2-r1 (20 Nov 2005)

  20 Nov 2005; Lance Albertson <ramereth@gentoo.org>
  nagios-plugins-1.4.1.ebuild, nagios-plugins-1.4.2.ebuild,
  +nagios-plugins-1.4.2-r1.ebuild:
  * Stable on x86