@@ -14,10 +14,10 @@ AUX nagios-plugins-1.4-noradius.patch 666 RMD160 5c1d6d73b39a5e1bf763dfa40a094a6
 MD5 73ee36e67ff5948e0db8c99963a9e89f files/nagios-plugins-1.4-noradius.patch 666
 RMD160 5c1d6d73b39a5e1bf763dfa40a094a602a92e233 files/nagios-plugins-1.4-noradius.patch 666
 SHA256 65dcc040bef18f6706a0534e29c04003920757b193010b07ff8740551c4c0865 files/nagios-plugins-1.4-noradius.patch 666
-AUX nagios-plugins-1.4.3-check_disk-fix.patch 2122 RMD160 36c5bda03e34f64683a1189ac9c5342f65caf66a SHA1 76529afde252a4fa36e4c894395144eed8e70d04 SHA256 e16fae6bc3a76609aeed40d63d14f07bd2778f7630b3aa509d9b5a2ec3d32dce
-MD5 5680f1f4259ac7f3c7b66c8f053ba5dd files/nagios-plugins-1.4.3-check_disk-fix.patch 2122
-RMD160 36c5bda03e34f64683a1189ac9c5342f65caf66a files/nagios-plugins-1.4.3-check_disk-fix.patch 2122
-SHA256 e16fae6bc3a76609aeed40d63d14f07bd2778f7630b3aa509d9b5a2ec3d32dce files/nagios-plugins-1.4.3-check_disk-fix.patch 2122
+AUX nagios-plugins-1.4.3-check_disk-fix.patch 1407 RMD160 94974e74f702f9602649e7288c3db31dcba55ba2 SHA1 097d7b5e6a6ce0ac396200aa80cbb6d03816ff92 SHA256 526c58157a927cdaa634dd0d6f3ebcaded99020e4a3a9201259a66460b95e470
+MD5 677500c14fa4b3f9cfdf21ec6ba5c45f files/nagios-plugins-1.4.3-check_disk-fix.patch 1407
+RMD160 94974e74f702f9602649e7288c3db31dcba55ba2 files/nagios-plugins-1.4.3-check_disk-fix.patch 1407
+SHA256 526c58157a927cdaa634dd0d6f3ebcaded99020e4a3a9201259a66460b95e470 files/nagios-plugins-1.4.3-check_disk-fix.patch 1407
 AUX nagios-plugins-noradius.patch 2661 RMD160 6b5cd77be1503721d512a0c67c182e98e3d788cf SHA1 1ed08b006a6073d2ec9794548cb4abdb5a59dba7 SHA256 91172235c0389e52093bee548771228bc14ab95b81d95f4d0d6ac55ea54fa006
 MD5 ee71da291efd7427bd9786591a98df34 files/nagios-plugins-noradius.patch 2661
 RMD160 6b5cd77be1503721d512a0c67c182e98e3d788cf files/nagios-plugins-noradius.patch 2661
@@ -51,10 +51,10 @@ EBUILD nagios-plugins-1.4.ebuild 3280 RMD160 068b6f58e3288712184f6cfd3733a43b06c
 MD5 ecd66c546a55d930384711d03d9af94c nagios-plugins-1.4.ebuild 3280
 RMD160 068b6f58e3288712184f6cfd3733a43b06c5bd30 nagios-plugins-1.4.ebuild 3280
 SHA256 2f008dc80969d66a6a84e42e5ff0aeb1409116a04acae37eca1f00902011cc8f nagios-plugins-1.4.ebuild 3280
-MISC ChangeLog 8876 RMD160 7c00d87862f5197168499c69c21e3749ac884746 SHA1 63ffb749f7c7e9d43e6f45451d523ba76ebc718b SHA256 e96b96c248f5d75d75793eeffc95efe9d2f1bc52bdd5d6fd8d0b720e704e5ed6
-MD5 063b5756239e5a1f8056cbb8813c2bfe ChangeLog 8876
-RMD160 7c00d87862f5197168499c69c21e3749ac884746 ChangeLog 8876
-SHA256 e96b96c248f5d75d75793eeffc95efe9d2f1bc52bdd5d6fd8d0b720e704e5ed6 ChangeLog 8876
+MISC ChangeLog 9076 RMD160 004e560f18ec0e0392c724d448afc32146519e15 SHA1 595c5c1fe3b206ca76863245e22962d64fef6897 SHA256 ef586a3a6d83c4ed406bbecc0d81bbd385d2c25d2a023939abee9e8d73e60888
+MD5 3cc0fffd69379901173cc5d45b35f38f ChangeLog 9076
+RMD160 004e560f18ec0e0392c724d448afc32146519e15 ChangeLog 9076
+SHA256 ef586a3a6d83c4ed406bbecc0d81bbd385d2c25d2a023939abee9e8d73e60888 ChangeLog 9076
 MISC metadata.xml 371 RMD160 8cd19aa36cd4f4615a30bbcdb0429b7dc0b7430f SHA1 32ad1225f75741bdb533609eef9004f5941dd839 SHA256 af0d4f06a9c915ebb24d136adae1ab0d3525db2a2ccd247aff558b1358bf43a1
 MD5 5db356dad10986a73f73a0335265ad92 metadata.xml 371
 RMD160 8cd19aa36cd4f4615a30bbcdb0429b7dc0b7430f metadata.xml 371
